syntax = "proto3";

package profiledb;

option go_package = "./filecachepb";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message FileCache {
  google.protobuf.Timestamp sync_time = 1;
  repeated Profile profiles = 2;
  repeated Device devices = 3;
  int32 version = 4;
}

message Profile {
  AccessSettings access = 21;
  ParentalProtectionSettings parental = 1;
  SafeBrowsingSettings safe_browsing = 19;
  oneof blocking_mode {
    BlockingModeCustomIP blocking_mode_custom_ip = 2;
    BlockingModeNXDOMAIN blocking_mode_nxdomain = 3;
    BlockingModeNullIP blocking_mode_null_ip = 4;
    BlockingModeREFUSED blocking_mode_refused = 5;
  }
  string profile_id = 6;
  google.protobuf.Timestamp update_time = 7;
  repeated string device_ids = 8;
  repeated string rule_list_ids = 9;
  repeated string custom_rules = 10;
  google.protobuf.Duration filtered_response_ttl = 11;
  bool filtering_enabled = 12;
  bool safe_browsing_enabled = 13 [deprecated = true];
  bool rule_lists_enabled = 14;
  bool query_log_enabled = 15;
  bool deleted = 16;
  bool block_private_relay = 17;
  bool block_firefox_canary = 18;
  bool ip_log_enabled = 20;
  bool auto_devices_enabled = 22;
  RateLimitSettings rate_limit = 23;
}

message ParentalProtectionSettings {
  ParentalProtectionSchedule schedule = 1;
  repeated string blocked_services = 2;
  bool enabled = 3;
  bool block_adult = 4;
  bool general_safe_search = 5;
  bool youtube_safe_search = 6;
}

message SafeBrowsingSettings {
  bool enabled = 1;
  bool block_dangerous_domains = 2;
  bool block_newly_registered_domains = 3;
}

message ParentalProtectionSchedule {
  string time_zone = 1;
  DayRange mon = 2;
  DayRange tue = 3;
  DayRange wed = 4;
  DayRange thu = 5;
  DayRange fri = 6;
  DayRange sat = 7;
  DayRange sun = 8;
}

message DayRange {
  uint32 start = 1;
  uint32 end = 2;
}

message BlockingModeCustomIP {
  repeated bytes ipv4 = 1;
  repeated bytes ipv6 = 2;
}

message BlockingModeNXDOMAIN {}

message BlockingModeNullIP {}

message BlockingModeREFUSED {}

message Device {
  AuthenticationSettings authentication = 6;
  string device_id = 1;
  string device_name = 3;
  string human_id_lower = 7;
  bytes linked_ip = 2;
  repeated bytes dedicated_ips = 4;
  bool filtering_enabled = 5;
}

message AccessSettings {
  repeated CidrRange allowlist_cidr = 1;
  repeated CidrRange blocklist_cidr = 2;
  repeated uint32 allowlist_asn = 3;
  repeated uint32 blocklist_asn = 4;
  repeated string blocklist_domain_rules = 5;
}

message CidrRange {
  bytes address = 1;
  uint32 prefix = 2;
}

message AuthenticationSettings {
  bool doh_auth_only = 1;
  oneof doh_password_hash {
    bytes password_hash_bcrypt = 2;
  }
}

message RateLimitSettings {
  bool enabled = 1;
  uint32 rps = 2;
  repeated CidrRange client_cidr = 3;
}
